@@ -1,4 +1,6 @@
 2006-07-26:
+	* src/stash.c(_pam_krb5_stash_clone): go back to overwriting the
+	template, to avoid uncontrolled growth in the filename.
 	* src/session.c(pam_sm_open_session): specify the current real
 	UID and GID when creating temporary v4 credential files.  Note the
 	guessed UID and GID of the user in the debug message.
